--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>カートっぽいの</title>
+	<link rel="stylesheet" type="text/css" href="/pwa-test5/css/app.css">
+	<link rel="manifest" href="manifest.json">
 	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
 	<script type="text/javascript" src="/pwa-test5/js/firebase-messaging.js"></script>
