--- a/index.html
+++ b/index.html
@@ -12,10 +12,28 @@
 	<script type="text/javascript" src="/pwa-test5/js/firebase-messaging.js"></script>
 </head>
 <body>
+	<header>
+		<h1>サイトヘッダー</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a>グローバルメニュー1</a></li>
+			<li><a>グローバルメニュー2</a></li>
+			<li><a>グローバルメニュー3</a></li>
+		</ul>
+	</nav>
 	<section>
 		ver 0.0.2
 		<pre id="token-console"></pre>
 	</section>
+	<footer>
+		<ul>
+			<li><a>フッターリンク1</a></li>
+			<li><a>フッターリンク2</a></li>
+			<li><a>フッターリンク3</a></li>
+		</ul>
+		<p>copyright</p>
+	</footer>
 	<script type="text/javascript" src="/pwa-test5/js/pwa.js"></script>
 	<script type="text/javascript" src="/pwa-test5/js/app.js"></script>
 </body>
