--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
 		</ul>
 	</nav>
 	<section>
-		ver 0.0.2
+		<div class="itemBox">
+			<div class="itemName">商品名</div>
+			<div class="itemOicture">商品写真</div>
+			<div class="itemDetail">商品説明</div>
+			<div class="itemPrice">\99,999-</div>
+			<button type="button">カートにいれる</button>
+		</div>
+	</section>
+	<section>
+		コンソール
 		<pre id="token-console"></pre>
 	</section>
 	<footer>
