--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<section>
 		<div class="itemBox">
 			<div class="itemName">商品名</div>
-			<div class="itemOicture">商品写真</div>
+			<div class="itemPicture">商品写真</div>
 			<div class="itemDetail">商品説明</div>
 			<div class="itemPrice">\99,999-</div>
 			<button type="button">カートにいれる</button>
